# sentry

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.tsx  api.ts  index.css  pages.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: control.rs  lib.rs  main.rs  monitor.rs  smart.rs
src/components/: CommandCard.tsx  HealthCard.tsx  IntelCard.tsx  Nav.tsx  PerfCards.tsx  ProcessesCard.tsx  TitleBar.tsx  primitives.tsx
