[package]
name = "sentry"
version = "0.1.0"
description = "Sentry — system intelligence dashboard"
authors = ["zaron"]
edition = "2021"

[lib]
name = "sentry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
wmi = "0.15"
nvml-wrapper = "0.10"
winreg = "0.55"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
] }
